--- a/public/index.html
+++ b/public/index.html
@@ -7,23 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Clasificación de Puntos</h1>
-    <div class="password-container">
-        <label for="password">Clave de edición:</label>
-        <input type="password" id="password" placeholder="Ingresa la clave">
-        <button id="validar-btn">Validar</button>
-    </div>
-    <table>
-        <thead>
-            <tr>
-                <th>Nombre</th>
-                <th>Puntos</th>
-                <th>Asistencias</th>
-            </tr>
-        </thead>
-        <tbody id="tabla-cuerpo">
+    <div class="main-container">
+        <h1>Clasificación de Puntos</h1>
+        <div class="password-container">
+            <label for="password">Clave de edición:</label>
+            <input type="password" id="password" placeholder="Ingresa la clave">
+            <button id="validar-btn">Validar</button>
+        </div>
+        <table>
+            <thead>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Puntos</th>
+                    <th>Asistencias</th>
+                </tr>
+            </thead>
+            <tbody id="tabla-cuerpo">
             </tbody>
-    </table>
+        </table>
+    </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
 </body>
