--- a/public/index.html
+++ b/public/index.html
@@ -3,30 +3,97 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clasificación de la Juntada</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Tabla La 12</title>
+    <style>
+        body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background: #1a1a1a; color: white; display: flex; flex-direction: column; align-items: center; padding: 20px; }
+        table { border-collapse: collapse; width: 90%; max-width: 600px; background: #2d2d2d; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 15px rgba(0,0,0,0.5); }
+        th, td { padding: 15px; text-align: center; border-bottom: 1px solid #444; }
+        th { background: #4a4a4a; color: #ffcc00; text-transform: uppercase; }
+        [contenteditable="true"] { background: #3d3d3d; border-radius: 4px; outline: none; transition: 0.3s; }
+        [contenteditable="true"]:focus { background: #555; box-shadow: inset 0 0 5px #ffcc00; }
+        .controles { margin-bottom: 20px; }
+        input { padding: 10px; border-radius: 5px; border: none; }
+    </style>
 </head>
 <body>
-    <div class="main-container">
-        <h1>Clasificación de Puntos</h1>
-        <div class="password-container">
-            <label for="password">Clave de edición:</label>
-            <input type="password" id="password" placeholder="Ingresa la clave">
-            <button id="validar-btn">Validar</button>
-        </div>
-        <table>
-            <thead>
-                <tr>
-                    <th>Nombre</th>
-                    <th>Puntos</th>
-                    <th>Asistencias</th>
-                </tr>
-            </thead>
-            <tbody id="tabla-cuerpo">
-            </tbody>
-        </table>
+
+    <h1>🏆 Tabla de Posiciones "La 12"</h1>
+
+    <div class="controles">
+        <input type="password" id="password" placeholder="Clave del Dios de la Tabla">
     </div>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="script.js"></script>
+
+    <table>
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Puntos</th>
+                <th>Asistencias</th>
+            </tr>
+        </thead>
+        <tbody id="tabla-cuerpo">
+            </tbody>
+    </table>
+
+    <script type="module">
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
+        import { getDatabase, ref, onValue, update } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
+
+        // 1. REEMPLAZA ESTO CON TUS DATOS DE CONFIGURACIÓN
+        const firebaseConfig = {
+            apiKey: "TU_API_KEY",
+            databaseURL: "https://tabla-la12-default-rtdb.firebaseio.com",
+            projectId: "tabla-la12",
+            appId: "TU_APP_ID"
+        };
+
+        const app = initializeApp(firebaseConfig);
+        const db = getDatabase(app);
+        const jugadoresRef = ref(db, 'jugadores');
+
+        // 2. ESCUCHAR CAMBIOS (Tiempo Real)
+        onValue(jugadoresRef, (snapshot) => {
+            const data = snapshot.val();
+            const tablaCuerpo = document.getElementById('tabla-cuerpo');
+            tablaCuerpo.innerHTML = '';
+            
+            const jugadores = [];
+            for (let id in data) { jugadores.push({ id, ...data[id] }); }
+
+            // Ordenamos por puntos (el que más falta tiene, arriba)
+            jugadores.sort((a, b) => b.puntos - a.puntos);
+
+            jugadores.forEach(j => {
+                const fila = document.createElement('tr');
+                fila.innerHTML = `
+                    <td>${j.nombre}</td>
+                    <td contenteditable="true" onblur="guardar('${j.id}', 'puntos', this.innerText)">${j.puntos}</td>
+                    <td contenteditable="true" onblur="guardar('${j.id}', 'asistencias', this.innerText)">${j.asistencias}</td>
+                `;
+                tablaCuerpo.appendChild(fila);
+            });
+        });
+
+        // 3. GUARDAR CAMBIOS
+        window.guardar = async (id, campo, valor) => {
+            const pass = document.getElementById('password').value;
+            
+            // Poné la clave que vos quieras acá:
+            if (pass !== "nico123") { 
+                alert("¡Clave incorrecta Papi! jajode!");
+                return;
+            }
+
+            const num = parseInt(valor);
+            if (isNaN(num)) return;
+
+            try {
+                await update(ref(db, `jugadores/${id}`), { [campo]: num });
+                console.log("Puntos actualizados para " + id);
+            } catch (e) {
+                alert("Error al guardar: " + e.message);
+            }
+        };
+    </script>
 </body>
 </html>
