--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         body { 
             font-family: 'Segoe UI', sans-serif; 
             /* Referencia a tu imagen en la carpeta public */
-            background: url('public/images/tu-imagen.jpg') no-repeat center center fixed; 
+            background: url('public/images/la12+zamo.jpeg') no-repeat center center fixed; 
             background-size: cover;
             color: white; margin: 0; padding: 20px;
         }
@@ -60,7 +60,7 @@
         </table>
 
         <div class="form-agregar">
-            <input type="text" id="nuevo-nombre" placeholder="Nombre del nuevo raye">
+            <input type="text" id="nuevo-nombre" placeholder="Nombre del nuevo Therian">
             <button onclick="agregarJugador()" style="background: var(--oro); color: black;">+ Agregar a la lista</button>
         </div>
     </div>
@@ -156,7 +156,7 @@
         // MODIFICAR Y GENERAR HISTORIAL
         window.modificar = async (id, campo, nuevoValor, viejoValor, nombreReal) => {
             const pass = document.getElementById('password').value;
-            if (pass !== "nico123") { // CAMBIÁ TU CLAVE ACÁ
+            if (pass !== "ladoce2026") { // CAMBIÁ TU CLAVE ACÁ
                 alert("¡Clave incorrecta Papi! jajode!");
                 location.reload(); 
                 return; 
