--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         window.agregarJugador = async () => {
             const pass = document.getElementById('password').value;
             const nombre = document.getElementById('nuevo-nombre').value;
-            if (pass !== "nico123") { alert("Clave mal para agregar!"); return; }
+            if (pass !== "ladoce2026") { alert("Clave mal para agregar!"); return; }
             if (!nombre) return;
 
             const id = nombre.toLowerCase().trim().replace(/\s/g, '_');
