--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         // --- SISTEMA DE CLAVE ---
 // Este código representa "ladoce2026" pero nadie puede saber qué es a simple vista
-const HASH_MAESTRO = "1363654034"; 
+const HASH_MAESTRO = "3312386"; // Este es el código secreto para "la12"
 
 // Función simple para ocultar la clave
 const generarHash = (str) => {
