--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
 
-    <h1>🏆 La 12 - Gestión de Faltas</h1>
+    <h1>🏆 La 12 - Gestión de Puntos</h1>
 
     <div class="nav">
         <button onclick="ver('tabla')" id="btn-tabla" class="active">Tabla</button>
@@ -46,9 +46,9 @@
     </div>
 
     <div class="controles">
-        <input type="password" id="password" placeholder="Clave del Dios">
+        <input type="password" id="password" placeholder="Clave del Dios de la tabla">
         <button onclick="validarYGuardarClave()" style="background: #444;">Acceder</button>
-        <p id="status-clave" style="font-size: 0.8em; margin-top: 5px; color: #aaa;">Clave requerida para editar.</p>
+        <p id="status-clave" style="font-size: 0.8em; margin-top: 5px; color: #aaa;">Si no tenes la clave tomatela rray.</p>
     </div>
 
     <div id="tabla" class="seccion active-section">
