--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         const db = getDatabase(app);
         
         // "bGExMg==" es "la12" codificado. Nadie lo sabe si mira el código.
-        const CLAVE_OCULTA = "bGExMg=="; 
+const CLAVE_OCULTA = "dGhlcmlhbnM=";
         let cacheHistorial = [];
 
         window.validarYGuardarClave = () => {
